Added external js dependencies; points show up on map

--- a/map.html
+++ b/map.html
@@ -4,29 +4,45 @@
   <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="http://d3js.org/topojson.v1.min.js"></script>
+  <script src="vendor/d3.min.js"></script>
+  <script src="vendor/topojson.min.js"></script>
   <script type="text/javascript">
 
-  var w = 1800, h = 1000;
+  var w = 1200, h = 800;
 
   var svg = d3.select("body").append("svg:svg")
     .attr("width", w)
     .attr("height", h);
 
   var projection = d3.geo.mercator()
-    .scale(120)
-    .center([0, 0])
-    .translate([w / 2, h / 2]);
+    .scale(200)
+    .center([0, 0]);
 
   var path = d3.geo.path()
     .projection(projection);
 
-  d3.json("world-50m.json", function(world) {
+  d3.json("vendor/world-50m.json", function(world) {
     svg.selectAll(".country")
       .data(topojson.feature(world, world.objects.countries).features)
       .enter().append("path")
-      .attr("d", path);
+      .attr("d", path)
+      .attr("class", "country");
+
+    d3.csv("places.csv").get(function(error, places) {
+      svg.selectAll("circle")
+        .data(places)
+        .enter().append("circle")
+        .attr("d", path)
+        .attr("cx", function(d) {
+          return projection([d.lon, d.lat])[0];
+        })
+        .attr("cy", function(d) {
+          return projection([d.lon, d.lat])[1];
+        })
+        .attr("r", 2)
+        .style("fill", "red");
+    });
+
   });
 
 </script>
