--- a/map.html
+++ b/map.html
@@ -15,13 +15,11 @@
     .attr("height", h);
 
   var projection = d3.geo.mercator()
-    .scale(200)
-    .center([0, 0]);
+    .scale(250)
+    .center([-30, 50]);
 
   var path = d3.geo.path()
     .projection(projection);
-
-  var timeFormat = d3.time.format("%x");
 
   d3.json("vendor/world-50m.json", function(world) {
     svg.selectAll(".country")
@@ -32,56 +30,99 @@
 
     // Need to do this in here so the map always loads first
     d3.csv("places.csv").get(function(error, places) {
-      var dates = places.map(function(p) { return timeFormat.parse(p.date); });
-      drawTimeline(dates);
+      drawTimeline();
       svg.selectAll("circle")
         .data(places)
         .enter().append("circle")
+        .attr("class", "marker")
         .attr("d", path)
+        .attr("data-lat", function(d) { return d.lat; })
+        .attr("data-lon", function(d) { return d.lon; })
         .attr("cx", function(d) {
           return projection([d.lon, d.lat])[0];
         })
         .attr("cy", function(d) {
           return projection([d.lon, d.lat])[1];
         })
-        .attr("r", 2)
-        .style("fill", "red");
+        .attr("r", 2);
     });
 
   });
 
-    function drawTimeline(dates) {
-      var margin = {top: 0, right: 10, bottom: 50, left: 0},
-        width = 1000 - margin.left - margin.right,
-        height = 100 - margin.top - margin.bottom;
+  function drawTimeline() {
+    var margin = {top: 20, right: 0, bottom: 30, left: 0},
+    width = 1200 - margin.left - margin.right,
+    height = 100 - margin.top - margin.bottom;
 
-      var x = d3.time.scale()
-          .domain([dates[0], dates[dates.length-1]])
-          .range([0, width]);
+    var x = d3.time.scale()
+      .range([0, width], .1);
 
-      var xAxis = d3.svg.axis()
-          .scale(x)
-          .ticks(d3.time.year, 1)
-          .tickFormat(d3.time.format("%Y"));
+    var y = d3.scale.linear()
+        .range([height, 0]);
 
-      var svg = d3.select("body").append("svg")
-          .attr("width", width + margin.left + margin.right)
-          .attr("height", height + margin.top + margin.bottom)
-        .append("g")
-          .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+    var xAxis = d3.svg.axis()
+        .scale(x)
+        .orient("bottom")
+        .ticks(d3.time.year, 1)
+        .tickFormat(d3.time.format("%Y"));
+
+    var yAxis = d3.svg.axis()
+        .scale(y)
+        .orient("left")
+        .ticks(0);
+
+    var svg = d3.select("body").append("svg")
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+      .append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+    d3.csv("places.csv", function(d) {
+      var timeFormat = d3.time.format("%x");
+      return {
+        "date": timeFormat.parse(d.date).getTime(),
+        "place": d.place,
+        "lat": d.lat,
+        "lon": d.lon
+      }
+    }, function(error, data) {
+
+      x.domain([data[0].date, data[data.length-1].date]);
+      y.domain([0, 1]);
 
       svg.append("g")
-          .attr("class", "x axis")
-          .attr("transform", "translate(0," + height + ")")
-          .call(xAxis)
-        .selectAll("text")
-          .attr("y", 0)
-          .attr("x", 9)
-          .attr("dy", ".35em")
-          .attr("transform", "rotate(90)")
-          .style("text-anchor", "start");
-    }
+        .attr("class", "x axis")
+        .attr("transform", "translate(0," + height + ")")
+        .call(xAxis);
+
+      svg.append("g")
+        .attr("class", "y axis")
+        .call(yAxis);
+
+      svg.selectAll(".bar")
+        .data(data)
+        .enter().append("rect")
+          .attr("class", "bar")
+          .attr("x", function(d) { return x(d.date); })
+          .attr("width", 2)
+          .attr("y", function(d) { return y(1); })
+          .attr("height", function(d) { return height - y(1); })
+          .attr("title", function(d) { return d.place; })
+          .on("mouseenter", function(d) {
+            d3.select(".marker[data-lat='" + d.lat + "'][data-lon='" + d.lon + "']").attr("id", "highlight");
+          })
+          .on("mouseout", function(d) {
+            d3.select(".marker[data-lat='" + d.lat + "'][data-lon='" + d.lon + "']").attr("id", "");
+          });
+
+    });
+  }
 
 </script>
+<!-- <defs>
+  <filter id="blurFilter" y="-5" height="40">
+    <feGaussianBlur stdDeviation="3" y="-"/>
+  </filter>
+</defs> -->
 </body>
 </html>
