--- a/map.html
+++ b/map.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>@teekirol's Travel History</title>
   <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
