Modifying things in case anyone ever wants to fork this ¯\_(ツ)_/¯

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     .attr("height", h)
     .attr("id", "container");
 
+  // You might have to change these numbers
   var projection = d3.geo.mercator()
     .scale(250)
     .center([-30, 50]);
